tests/snapshots/validator_snapshots__validator_all@validator-60.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/networking/web_server/web_server.of
---
ValidationErrors(
    [
        "invalid struct initializer in function 'test_module::parse_request_bytes' (null)",
        "invalid struct initializer in function 'test_module::parse_request_bytes' (null)",
        "type mismatch in function 'test_module::Connection::read_request' (call to parse_request_bytes arg 1): expected 'int64', found 'null'",
        "type mismatch in function 'test_module::parse_request_bytes' (field method): expected 'string', found 'null'",
        "type mismatch in function 'test_module::parse_request_bytes' (field path): expected 'string', found 'null'",
        "type mismatch in function 'test_module::parse_request_bytes' (field protocol): expected 'string', found 'null'",
        "type mismatch in function 'test_module::parse_request_bytes' (field raw): expected 'string', found 'null'",
        "type mismatch in function 'test_module::parse_request_bytes' (variable 'body_str'): expected 'string', found 'null | string'",
        "type mismatch in function 'test_module::scan_blank_line' (binary Eq): expected 'null', found 'uint8'",
        "type mismatch in function 'test_module::scan_blank_line' (binary Eq): expected 'null', found 'uint8'",
        "type mismatch in function 'test_module::scan_blank_line' (binary Eq): expected 'null', found 'uint8'",
        "type mismatch in function 'test_module::scan_blank_line' (binary Eq): expected 'null', found 'uint8'",
        "type mismatch in function 'test_module::scan_for' (binary Eq): expected 'null', found 'uint8'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of_io'",
        "unknown member 'close' on 'null' in function 'test_module::Connection::close'",
        "unknown member 'buf' on 'null' in function 'test_module::Connection::read_request'",
        "unknown member 'free' on 'null' in function 'test_module::Connection::read_request'",
        "unknown member 'len' on 'null' in function 'test_module::Connection::read_request'",
        "unknown member 'read' on 'null' in function 'test_module::Connection::read_request'",
        "unknown member 'write_str' on 'null' in function 'test_module::Connection::write_response'",
        "unknown member 'accept' on 'null' in function 'test_module::Server::accept'",
        "unknown member 'bind' on 'null' in function 'test_module::Server::bind'",
        "unknown member 'close' on 'null' in function 'test_module::Server::close'",
        "unknown member 'get' on 'null' in function 'test_module::scan_blank_line'",
        "unknown member 'get' on 'null' in function 'test_module::scan_blank_line'",
        "unknown member 'get' on 'null' in function 'test_module::scan_blank_line'",
        "unknown member 'get' on 'null' in function 'test_module::scan_blank_line'",
        "unknown member 'get' on 'null' in function 'test_module::scan_for'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'ReadResult' in module 'test_module'",
        "unknown type 'TcpListener' in module 'test_module'",
        "unknown type 'TcpListener' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown variable 'TcpListener' in function 'test_module::Server::bind'",
        "unknown variable 'println' in function 'test_module::log'",
        "unknown variable '__of_str_from_buffer' in function 'test_module::parse_request_bytes'",
        "unknown variable '__of_str_from_buffer' in function 'test_module::parse_request_bytes'",
        "unknown variable '__of_str_from_buffer' in function 'test_module::parse_request_bytes'",
        "unknown variable '__of_str_from_buffer' in function 'test_module::parse_request_bytes'",
        "unknown variable '__of_str_from_buffer' in function 'test_module::parse_request_bytes'",
    ],
)
