tests/snapshots/validator_snapshots__validator_all@validator-61.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_empty_program.of
---
Ok
