tests/snapshots/validator_snapshots__validator_all@validator-63.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_extern_function_generic_pointer.of
---
Ok
