tests/snapshots/validator_snapshots__validator_all@validator-65.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_extern_function_pointer_param_and_return.of
---
ValidationErrors(
    [
        "unknown type 'Buffer' in module 'test_module'",
    ],
)
