tests/snapshots/validator_snapshots__validator_all@validator-67.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_extend_with_method.of
---
ValidationErrors(
    [
        "unknown type 'Foo' in module 'test_module'",
    ],
)
