tests/snapshots/validator_snapshots__validator_all@validator-69.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_extern_function_nullable_pointer_return.of
---
ValidationErrors(
    [
        "unknown type 'Buffer' in module 'test_module'",
    ],
)
