tests/snapshots/validator_snapshots__validator_all@validator-7.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/07_structs.of
---
ParserError(
    "unexpected token 'self'",
)
