tests/snapshots/validator_snapshots__validator_all@validator-70.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_map_literal.of
---
Ok
